fix: Added devider between price min-max input boxes. Renamed Reset filters to Reset. Removed error container visibility.

--- a/src/components/Sidebar/SidebarContainer/Sidebar.module.scss
+++ b/src/components/Sidebar/SidebarContainer/Sidebar.module.scss
@@ -26,6 +26,14 @@
   gap: 48px;
 }
 
+.reset_btn {
+  color: var(--clr-secondary-300);
+
+  &:hover {
+    color: var(--clr-secondary);
+  }
+}
+
 @include desktop {
   .container {
     width: 200px;
